fix: add environment to deployment workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,8 +9,18 @@ permissions:
   pages: write
   id-token: write
 
+# Only allow one concurrent deployment
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
+
 jobs:
   build-and-deploy:
+    # --- THIS BLOCK IS THE FIX ---
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    # -----------------------------
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -26,7 +36,6 @@ jobs:
         run: npm install
 
       - name: Build project
-        # This injects your secrets into the build so Supabase works
         run: npm run build
         env:
           VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
